2005-07-13  Olav Vitters  <olav@bkor.dhs.org>

	* docs/C/stickynotes_applet.xml:
	* docs/uk/stickynotes_applet.xml:

	Correct duplicate XML id and change one instance of
	stickynotes-using-left-fig to stickynotes-using-right-fig. Also
	correct the description. Patch from Jan de Groot <jan@jgc.homeip.net>.
	Reported by <thacker@math.cornell.edu>. Closes #171728.

2005-07-13  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_StickyNotesApplet.xml:
	* stickynotes.c:
	* stickynotes.schemas.in:
	* stickynotes_applet.c:
	* stickynotes_applet.h:
	* stickynotes_applet_callbacks.c:
	* stickynotes_applet_callbacks.h: stickynotes features from
	  Jaap A. Haitsma <jaap@haitsma.org>. Closes #308701.

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet.c: use GtkIconTheme instead of GnomeIconTheme.
	  Patch by Michael Terry <mike@mterry.name>. Closes #170198.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* stickynotes.c:
	* stickynotes_applet.c:
	* stickynotes_applet.h:
	* stickynotes_applet_callbacks.c:
	* util.c:
	* util.h: Cleanups

2005-03-07  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/figures/*.png: many new images

	* docs/C/stickynotes_applet.xml: Update documentation for GNOME 2.10.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* stickynotes_applet_callbacks.c: Don't leak style while handling
	the change_background signal.  Fix adapted from Vincent Untz's fixes
	to various panel applets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* stickynotes.c: (stickynotes_save): Don't mix code and decl.

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_callbacks.c: Don't free something we're not meant to.
	  Why hadn't this crashed?

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet.c: Use DATADIR in
	panel_applet_setup_menu_from_file(). Useful if you're running out of
	prefix. Other applets should have this fix.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
