@@ -20,6 +20,7 @@ Template last modified Mar 12, 2002
     
     <articleinfo> 
       <title>&applet; Manual</title> 
+      <abstract role="description">User manual for the Sticky Notes applet.</abstract>
 
       <copyright>
         <year>2005</year>
