@@ -1,31 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      gdocteam@sun.com (Sun Microsystems)
-    </creator>
-    <maintainer>
-      gdocteam@sun.com (Sun Microsystems)
-    </maintainer>
-    <title>
-      Ohar itsaskorren applet-aren eskuliburuaren 2.1 bertsioa
-    </title>
-    <date>
-      2003-08-07
-    </date>
-    <version identifier="2.1" date="2003-08-07" description="Updated for GNOME 2.4, program version 2.3.6"/>
-    <subject category="GNOME|Applets|Accessories"/>
-    <description>
-      Ohar itsaskorren applet-aren erabiltzailearen eskuliburua 
-    </description>
-    <type>
-      erabiltzailearen gida
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="stickynotes_applet.xml"/>
-    <language code="eu"/>
-    <relation seriesid="b8128ac2-17d4-11d7-9998-e6a4bbe01510"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
-
