@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      gdocteam@sun.com (Sun Microsystems)
-    </creator>
-    <maintainer>
-      gdocteam@sun.com (Sun Microsystems)
-    </maintainer>
-    <title>
-      Manuale dell'applet Note adesive V2.1.1
-    </title>
-    <date>
-      2003-08-28
-    </date>
-    <version identifier="2.1.1" date="2003-08-28" description="Aggiornato per GNOME 2.4, versione programma 2.3.6"/>
-    <subject category="GNOME|Applets|Accessories"/>
-    <description>
-      Manuale utente dell'applet Note adesive. 
-    </description>
-    <type>
-      user's guide
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="stickynotes_applet.xml"/>
-    <language code="it"/>
-    <relation seriesid="b8128ac2-17d4-11d7-9998-e6a4bbe01510"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
