@@ -1,11 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-figdir = figures
-docname = stickynotes_applet
-lang = ja
-omffile = stickynotes_applet-ja.omf
-entities = legal.xml
-
-include $(top_srcdir)/xmldocs.make
-
-dist-hook: app-dist-hook
