@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>
-      gdocteam@sun.com(Sun Microsystems)
-    </creator>
-    <maintainer>
-      gdocteam@sun.com(Sun Microsystems)
-    </maintainer>
-    <title>
-      Sticky 노트 애플릿 설명서 V2.1.1
-    </title>
-    <date>
-      2003-08-28
-    </date>
-    <version identifier="2.1.1" date="2003-08-28" description="Updated for GNOME 2.4, program version 2.3.6"/>
-    <subject category="GNOME|Applets|Accessories"/>
-    <description>
-      Sticky 노트 애플릿의 사용자 설명서입니다. 
-    </description>
-    <type>
-      사용자 설명서
-    </type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="stickynotes_applet.xml"/>
-    <language code="ko"/>
-    <relation seriesid="b8128ac2-17d4-11d7-9998-e6a4bbe01510"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
