@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <subject category="GNOME|Applets|Accessories"/>
+    <type>user's guide</type>
+    <relation seriesid="b8128ac2-17d4-11d7-9998-e6a4bbe01510"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
+  </resource>        
+</omf>
