@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<omf>
-  <resource>
-    <creator>docs@gnome.org (GDP)</creator>
-    <maintainer>docs@gnome.org (GDP)</maintainer>
-    <title>Аплет "Липкі нотатки"</title>
-    <date>2004-09-13</date>
-    <version identifier="2.8" date="2004-09-13"
-	     description="Updated for GNOME 2.8, program version 2.8"/>
-    <subject category="GNOME|Applets|Accessories"/>
-    <description>Довідка з аплету "Липкі нотатки".</description>
-    <type>посібник користувача</type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="stickynotes_applet.xml"/>
-    <language code="uk"/>
-    <relation seriesid="b8128ac2-17d4-11d7-9998-e6a4bbe01510"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Sun Microsystems"/>
-  </resource>        
-</omf>
