@@ -1,3 +1,11 @@
+2005-07-20  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/Makefile.am:
+	* docs/stickynotes_applet.omf.in:
+	* docs/C/stickynotes_applet.xml: gnome-doc-utilise
+
+	* docs/: remove unwanted gumpf
+
 2005-07-13  Olav Vitters  <olav@bkor.dhs.org>
 
 	* docs/C/stickynotes_applet.xml:
